<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Habit AndroRPG</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="hello_world">Hello world!</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
	<string name="XP_default">XP</string>
	<string name="HP_default">HP</string>
	<string name="format_todo_date">%1$d-%2$d-%3$d</string>
	<string name="new_task_added_message">A new task have been added</string>
	<string name="lvlup">LVL UP!</string>
	<string name="action_barcode">Scan a barcode</string>
	<string name="ERR_pb_barcode">Prefs couldn\'t be loaded from the barcode</string>
	<string name="settings_changed">Settings were successfully updated!</string>
	<string name="pref_dialog_title">HabitRPG settings</string>
	<string name="string_pref_dialog_positive">Ok!</string>
	<!--  Prefs -->
	<string name="PS_param_title">Params</string>
	<string name="PS_param_summary">Server config</string>
	<string name="SP_address">ServerAdress</string>
	<string name="SP_address_title">Server Address</string>
	<string name="SP_address_summary">Enter the address of the server</string>
	<string name="SP_address_default">https://habitrpg.com/</string>
	<string name="SP_address_hint">Your custom server</string>
	<string name="SP_userID">UserID</string>
	<string name="SP_userID_title">User ID</string>
	<string name="SP_userID_summary">Your User ID</string>
	<string name="SP_APIToken">APIToken</string>
	<string name="SP_APIToken_title">API Token</string>
	<string name="SP_APIToken_summary">Your API Token</string>
	<string name="PS_contact_title">Contact me</string>
	<string name="SP_open_twitter">\@MagicMicky</string>
	<string name="SP_open_twitter_summary">Contact me via Twitter</string>
	<string name="SP_licences">Licence notices</string>
	<string name="SP_licences_summary">Information about softwares that helped me develop this software</string>
	<string name="pb_settings">There was a problem with the settings</string>
	<string name="go_to_preferences">Please fill the settings.</string>
	<string name="unknown_error">An error happened…</string>		
	<!-- Adding tasks -->
	<string name="task_note_hint">Add a note</string>
	<string name="new_task">Creation of a new %s</string>
	<string name="task_text">Task:</string>
	<string name="task_note">Note:</string>
	<string name="task_duedate">Due date:</string>
	<string name="task_value">Value:</string>
	<string name="task_up">Up</string>
	<string name="task_down">Down</string>
	<string name="dialog_confirm_button">Ok</string>
	<string name="dialog_cancel_button">Cancel</string>
	<string name="task_value_hint">20</string>
	<string name="task_creation_fail">Task creation has failed: you need to provide a title</string>
	<!--<string name="UpdateToPremiumMsg">If you like this application,\n think about upgrading to premium!</string>
	<string name="premium_failed">Too bad, you didn\'t buy the premium package!</string>
	<string name="premium_thanks">Thanks for buying the premium version!</string>
	<string name="SP_is_premium">is_premium</string>
	<string name="UpdateToPremium_list_item">Premium mode</string>
	<string name="UpdateToPremium_list_item_details">Unlock exclusive features</string>
	<string name="action_premium">Upgrade to premium</string>-->
	<string name="drawer_open">Open drawer</string>
	<string name="drawer_close">close drawer</string>
	<!--<string name="premium_only">Feature reserved to premium users</string>-->
	<string name="missing_tags">…</string>
	<string name="tags_section_title">Tags</string>
	<string name="QRCode">To simplify everything you can scan the QRCode to connect to HabitRPG. To
		start the scanning mode, use the button in the menu.
	</string>
	<string name="SP_acknowledge_qrcode">acknowledge_qrcode_omg</string>
	<string name="create_todo_hint">New todo</string>
	<string name="create_reward_hint">New reward</string>
	<string name="create_daily_hint">New daily</string>
	<string name="create_habit_hint">New habit</string>
	<string name="create_task_hint">New task</string>
	<string name="task_deleted">The task %s was deleted successfully</string>
	<string name="action_edit">Edit</string>
	<string name="action_delete">Delete</string>
	<string name="cab_selected">%d tasks selected</string>
	<string name="action_cancel">Cancel</string>
	<string name="task_edited">A task were successfully updated</string>
	<string name="item_bought">You just bought a shinny new %s!</string>
	<string name="userToken">User Token</string>
	<string name="apiToken">API Token</string>
	<string name="login_btn">Login (normal)</string>
	<string name="register_btn">Register</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="emailAddress">Email address</string>
	<string name="confirmpassword">Confirm password</string>
	<string name="login_tokens_btn">Login (via tokens)</string>
	<string name="fb_login_message">If you registered via facebook, please use the QRCode, or login
		using your API/USER tokens
	</string>
	<string name="ERR_pb_accountCreation">An error happened. Please try to connect</string>
	<string name="ERR_pb_connection">Error: your credentials couldn\'t be saved!</string>
	<string name="logout">Logout</string>
	<string name="LoginActivityName">Login</string>
	<string name="helpString">To use this application, you need to have an account on http://habitrpg.com. You can register using the register button in this application.\n\n
	If you already have an account, use the connect buttons, or the QRCode scanner. If you created your account using Facebook on the website, you will need to use the QRcode scanner or connect using your API and User token that you can find on http://habitrpg.com.</string>
	<string name="action_info">Help</string>
	<string name="user_dead_title">You\'re dead!</string>
	<string name="user_dead_mess">You weren\'t vigilant enough, and get lost between some bad habits and some difficult dailies.
		You are going to revive, but will loose a level, your gold and a random piece of equipment.
		Try to be more careful with your dailies, and manage those bad habits!
	</string>
	<string name="string_revive">Revive</string>
    <string name="refreshing_widget">Refreshing widget...</string>
    <string name="please_connect">Please connect through the application before using a widget</string>
    <!--<string name="upgrade_premium_widget">To use the widget, please upgrade to premium.</string>-->
    <string name="title_changelog">Change log</string>
    <string name="changelog_close">Close</string>
    <string name="SP_last_seen_version">SP_last_version</string>
    <string name="SP_see_changelog">See the changelog</string>

    <!-- Premium - ->
    <string name="premium_sku">premium</string>
    <string name="appPublicKey">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAqxsCCpTSRrjW/vQoc1oSjFyaDqVqQIreY1+i5npLKbWbcwovdF4MbyFjIQzRBiGvbxPRYNlApmoDNIeHjr7qJrprsuPwSMThFLRv3unsGJws7/vxdbcp6YTpmyJODk2zSmRvI5OTu+hfB+SESzrfE1K960+mawCI+N7ee5xIg1sEZmV6e8mQ33f+gE3yaivPw6FYBnqSO6V0bq+k6nUyuN5Hk7wQKOXlZ4quJy1IsI/LhGl7ZSxx0fPoMe0QdjZpvW0leEpdXLU0LUpGR0fm2Ui2qj0gJP5OyDwo2EbF7PLDIz0zmisHWpV/vHKljGHCKzBZu46YgQZRn+zueqVjywIDAQAB</string>
    <string name="adKey">ca-app-pub-3124440915077289/1083610578</string>
    <string name="action_premium">Upgrade to premium</string>-->


</resources>