<?xml version="1.0" encoding="utf-8"?>
<preference-headers
    xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <header android:fragment="com.magicmicky.habitrpgmobileapp.prefs.PrefsActivity$PrefsFragment"
        android:title="@string/PS_param_title"
        android:icon="@drawable/ic_action_computer"
        android:summary="@string/PS_param_summary">
        <extra android:name="pref-resource" android:value="app_prefs_cat1" />
    </header>

    <header
        android:icon="@drawable/ic_action_twitter"
        android:title="@string/SP_open_twitter"
        android:summary="@string/SP_open_twitter_summary">
        <intent android:action="android.intent.action.VIEW"
                android:data="http://twitter.com/MagicMicky" />
    </header>
    <header 
        android:title="@string/SP_licences"
        android:summary="@string/SP_licences_summary">
    	<intent android:action="android.intent.action.VIEW"
    	    android:data="https://dl.dropboxusercontent.com/u/9280157/HabitRPGNotice.html"/>
    </header>
    <header
        android:id="@+id/show_changelog"
        android:title="@string/title_changelog"
        android:summary="@string/SP_see_changelog">
    </header>

</preference-headers>