<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/PS_contact_title">

    <PreferenceCategory android:title="Account Details">

        <EditTextPreference
            android:enabled="false"
            android:key="@string/SP_username"
            android:persistent="false"
            android:selectable="false"
            android:shouldDisableView="false"
            android:summary="Login Name"
            android:title="Login Name" />

        <EditTextPreference
            android:enabled="false"
            android:key="@string/SP_email"
            android:persistent="false"
            android:selectable="false"
            android:shouldDisableView="false"
            android:summary="E-mail"
            android:title="E-mail" />

        <EditTextPreference
            android:enabled="false"
            android:key="@string/SP_userID"
            android:persistent="false"
            android:selectable="false"
            android:shouldDisableView="false"
            android:summary="@string/SP_userID_summary"
            android:title="@string/SP_userID_title" />

        <EditTextPreference
            android:enabled="false"
            android:key="@string/SP_APIToken"
            android:persistent="false"
            android:selectable="false"
            android:shouldDisableView="false"
            android:summary="@string/SP_APIToken_summary"
            android:title="@string/SP_APIToken_title" />

    </PreferenceCategory>
</PreferenceScreen>