<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/TV_taskText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/ET_taskText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:ems="10"

                android:hint="@string/create_task_hint"
                android:inputType="textCapSentences|textNoSuggestions"
                android:singleLine="true"

                app:met_floatingLabel="normal" />

            <ImageButton
                android:id="@+id/BT_checklist"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="right"
                android:background="@color/transparent"
                android:visibility="gone"
                android:src="@drawable/ic_action_list" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/TV_taskNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_note"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/ET_taskNote"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/task_note_hint"
                android:inputType="textCapSentences|textMultiLine"
                android:minLines="2">

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/repeat_days"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="top"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:visibility="gone">
            <!-- Day buttons are put here programatically -->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/value"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:visibility="gone">

            <TextView
                android:id="@+id/TV_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_value"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/ET_taskValue"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="1234567890"
                android:ems="10"
                android:hint="@string/task_value_hint"
                android:inputType="number|phone"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:visibility="gone">

            <TextView
                android:id="@+id/TV_due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_duedate"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/due_date_spinner"
                style="?android:attr/spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
