<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/login.linear.layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="40dp"
        android:paddingTop="40dp"
        android:shrinkColumns="0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_span="2"
                android:src="@drawable/ic_gryphon" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:src="@drawable/ic_habitica" />
        </TableRow>

        <TableRow
            android:id="@+id/username_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:layout_marginRight="4dp"
                android:src="@drawable/ic_username" />

            <EditText
                android:id="@+id/username"
                android:layout_width="@dimen/login_field_width"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:singleLine="true" />

        </TableRow>

        <TableRow
            android:id="@+id/email_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:layout_marginRight="4dp"
                android:src="@drawable/ic_email" />

            <EditText
                android:id="@+id/email"
                android:layout_width="@dimen/login_field_width"
                android:layout_height="wrap_content"
                android:hint="@string/emailAddress"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:id="@+id/password_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:layout_marginRight="4dp"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="@dimen/login_field_width"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:id="@+id/confirm_password_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:layout_marginRight="4dp"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="@dimen/login_field_width"
                android:layout_height="wrap_content"
                android:hint="@string/confirmpassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_span="2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login_btn" />

                <ProgressBar
                    android:id="@+id/PB_AsyncTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="gone" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:layout_span="2" />
        </TableRow>

    </TableLayout>

</ScrollView>